# PoketEncyclopedia-Server

./: .gitignore  README.md  payload.json  pyproject.toml  run.py
